--- a/src/main/resources/static/css/navigation.css
+++ b/src/main/resources/static/css/navigation.css
@@ -15,6 +15,25 @@
     width: 100vw;
     display: flex;
     justify-content: space-between;
+    padding: 5px 20px;
+    box-shadow: 5px 5px 15px grey;
+    border-radius: 0 0 8px 8px
+}
+
+.nav-btn{
+    background: transparent;
+    border: 0;
+    z-index: 101;    outline: none;
+    cursor: pointer;
+    outline: 0!important;
+}
+
+.nav-btn path{
+    transition: all 0.5s;
+}
+
+.nav-btn.active path{
+    fill: white;
 }
 
 .navbar2-nav{
@@ -37,6 +56,20 @@
     transform: translateX(0);
 }
 
+.navbar2-nav::-webkit-scrollbar {
+    width: 10px;
+}
+
+.navbar2-nav::-webkit-scrollbar-track {
+    background: #252539;
+}
+
+.navbar2-nav::-webkit-scrollbar-thumb {
+    background-color: #006c91; /* color of the scroll thumb */
+    border-radius: 20px; /* roundness of the scroll thumb */
+    border: 3px solid #252539; /* creates padding around scroll thumb */
+}
+
 
 .brand{
     display: none;
@@ -53,11 +86,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 
 .identity > .name{
     font-size: 30px;
     color: #00ADEF;
+}
+
+.identity > a{
+    position: absolute;
+    top: 17px;
+    right: 30px;
 }
 
 .identity-sub{
@@ -85,7 +125,7 @@
     border: none;
     border-radius: 15px/50%;
     color: white!important;
-    font-size: 18px;
+    font-size: 16px;
     text-decoration: none!important;
     width: 100%;
     transition: background-color 0.1s;
@@ -104,6 +144,11 @@
     content: '>';
     position: absolute;
     right: 30px;
+    transition: transform 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.375);
+}
+
+.drop-title.active::after{
+    transform: rotateZ(90deg);
 }
 
 .drop-downs{
@@ -111,6 +156,30 @@
     padding-left: 15px;
     overflow: hidden;
     transition: height 0.6s;
+}
+
+.search-bar{
+    display: flex;
+    align-items: center;
+}
+
+.input-searchbar{
+    min-width: 0;
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid #00ADEF;
+    outline: none!important;
+    padding-bottom: 0;
+}
+
+.search-bar:focus-within{
+    background-color: #585888;
+}
+
+.search-btn{
+    background-color: transparent;
+    border: none;
+    outline: none!important;
 }
 
 
