Simulation d'une mission avec résultat à la fin. Affichage des différentes mission pour un apprenant. Possibilité de l'inscrire si on est admin. Code bizarre dans MissionService. La BD n'as pas du être générer via hibernate ou avec un autre naming. Compléter action scoreminimal et indicator valueIfCheck et unCheck si bug.

--- a/src/main/resources/static/css/navigation.css
+++ b/src/main/resources/static/css/navigation.css
@@ -94,10 +94,10 @@
     color: #00ADEF;
 }
 
-.identity > a{
+.logout-link{
     position: absolute;
-    top: 17px;
-    right: 30px;
+    top: 7px;
+    right: 15px;
 }
 
 .identity-sub{
@@ -203,5 +203,9 @@
         align-self: center;
         align-items: center;
         margin-bottom: 30px;
+    }
+
+    .logout-link{
+        top: 41px;
     }
 }
