--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -22,6 +22,8 @@ main {
     justify-content: space-between;
     color: white;
     height: 100vh;
+    width: initial!important;
+    overflow: auto!important;
 }
 
 .brand {
@@ -123,6 +125,26 @@ main {
     border: none;
     outline: none!important;
     text-decoration: underline;
+    cursor: pointer;
+    position: relative;
+}
+
+.btn-link::after {
+    content: '';
+    width: 100%;
+    height: 0.1em;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    opacity: 0;;
+    transition: all 0.2s;
+    transform: scale(0);
+    background-color: white;
+}
+
+.btn-link:hover::after{
+    transform: scale(1);
+    opacity: 1;
 }
 
 .action-sign{
@@ -298,13 +320,13 @@ label{
     }
 
     .asset-element svg{
-        height: 58px;
-        width: 58px;
+        height: 48px;
+        width: 48px;
     }
 
     .asset-element p{
         margin-left: 30px;
-        font-size: 40px;
+        font-size: 30px;
     }
 
     .btn-primary,
