--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -2,10 +2,110 @@
     margin: 0;
     padding: 0;
     font-family: "Roboto";
-    font-weight: 700;
     box-sizing: border-box;
 }
 
 :root{
     --primary: #00ADEF;
+    --danger: #ff0000
+}
+
+body{
+    background-color: #F7F6FF;
+}
+
+main{
+    padding: 30px;
+    height: 100vh;
+    overflow: scroll;
+}
+
+h1 {
+    font-size: 30px;
+    font-weight: bold;
+    margin-top: 0;
+}
+
+h2{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.text-success, .text-primary{
+    color: var(--primary);
+    font-weight: bold;
+}
+
+.text-danger{
+    color: var(--danger);
+    font-weight: bold;
+}
+
+.text-center{
+    text-align: center;
+}
+
+.btn-svg{
+    background: none!important;
+    border: 0;
+    outline: 0!important;
+    box-shadow: none!important;
+    cursor: pointer;
+}
+
+.btn-link{
+    text-decoration: none!important;
+}
+
+
+.btn-primary{
+    background-color: var(--primary);
+    border: 1px solid transparent;
+    padding: 10px 30px;
+    border-radius: 51px;
+    color: white;
+    transition: all 0.2s ease-in-out;
+}
+
+.btn-primary:hover{
+    background-color: white;
+    border-color: var(--primary);
+    color: var(--primary);
+}
+
+.container-primary{
+    border: 1px solid var(--primary);
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
+    padding: 25px;
+}
+
+.container-danger{
+    border: 1px solid var(--danger);
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
+    padding: 25px;
+}
+
+.btn-primary-reverse{
+    background-color: white;
+    color: var(--primary);
+    border: 1px solid var(--primary);
+    padding: 10px 20px;
+    border-radius: 15px;
+}
+
+@media (min-width: 600px) {
+    h1{
+        font-size: 36px;
+    }
+}
+
+
+@media (min-width: 900px) {
+    main{
+        width: calc(100% - 300px);
+    }
 }
