--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -64,6 +64,7 @@ h2{
     padding: 10px 30px;
     border-radius: 51px;
     color: white;
+    cursor: pointer;
     transition: all 0.2s ease-in-out;
 }
 
@@ -96,6 +97,7 @@ h2{
     padding: 10px 20px;
     border-radius: 15px;
 }
+
 
 @media (min-width: 600px) {
     h1{
