Affichage action indicateurs modifier action ...

--- a/src/main/resources/static/css/ajouterApprenant.css
+++ b/src/main/resources/static/css/ajouterApprenant.css
@@ -27,6 +27,8 @@ input[type=text], input[type=password]{
     font-weight: bold;
     font-size: 14px;
     width: 100%;
+    position: relative;
+    z-index: 2;
 }
 
 label{
