--- a/src/main/resources/static/css/listerActions.css
+++ b/src/main/resources/static/css/listerActions.css
@@ -1,12 +1,20 @@
+main{
+    overflow: auto;
+}
+
 .mission-container{
     margin-right: 0;
 }
 
 .mission-grid{
-    grid-template-columns: 1fr 3fr 3fr 1fr;
+    grid-template-columns: 1fr 5fr 2fr 1fr 1fr;
     padding: 25px;
     column-gap: 5px;
     align-items: center;
+}
+
+.mission-grid::after{
+    display: none!important;
 }
 
 .action-grid{
@@ -21,5 +29,5 @@
 
 .btn-primary{
     align-self: start;
-    margin-top: 30px;
+    margin-top: 20px;
 }
